--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularMultipleDialogs</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<meta charset="utf-8">
+	<title>Multiple Dialogs | StackOverflow</title>
+	<base href="/">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="mat-app-background mat-typography">
+	<my-app>loading</my-app>
 </body>
+
 </html>
